# XLStatus

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.agent  Dockerfile.server  LICENSE  M1-M4-STATUS-REPORT.md  M1-PROGRESS.md  M2-PROGRESS.md  M3-COMPLETION.md  M4-COMPLETION.md  M4-FINAL-STATUS.md  M4-IMPLEMENTATION-PROGRESS.md  M4-SUMMARY.md  M5-COMPLETION.md  M5-FILES-CREATED.md  M5-PROGRESS.md  M5-SUMMARY.md  M6-COMPLETION.md  M6-FULL-COMPLETION.md  PROJECT-COMPLETION.md  PROJECT-STATUS.md  README.md  README.zh-CN.md  config.example.toml  docker-compose.pg.yml  docker-compose.simple.yml  docker-compose.yml
.github/workflows/: build.yml
crates/agent/: Cargo.toml
crates/agent/src/: main.rs
crates/agent/src/collector/: mod.rs
crates/agent/src/executor/: files.rs  http.rs  icmp.rs  mod.rs  shell.rs  tcp.rs  terminal.rs
crates/proto-gen/: Cargo.toml  build.rs
crates/proto-gen/src/: lib.rs
crates/server/: Cargo.toml
crates/server/migrations/postgres/: 001_initial.sql  002_agents.sql  003_services.sql  004_nat.sql  005_tasks.sql  006_agent_state.sql  007_m4_m6.sql  008_m8_performance.sql  009_agent_service_metadata.sql  010_service_servers.sql  011_waf.sql  012_service_cover_mode.sql  013_auth_totp.sql  014_oauth_accounts.sql  015_agent_ip_events.sql  016_server_groups.sql  017_system_settings.sql  018_trigger_task_ids.sql  019_server_owner_transfers.sql  020_temporary_transfer_tokens.sql  021_pat_expiration_backfill.sql  022_service_owner.sql
crates/server/migrations/sqlite/: 001_initial.sql  002_agents.sql  003_services.sql  004_nat.sql  005_tasks.sql  006_agent_state.sql  007_m4_m6.sql  008_m8_performance.sql  009_agent_service_metadata.sql  010_service_servers.sql  011_waf.sql  012_auth_totp.sql  013_oauth_accounts.sql  014_agent_ip_events.sql  015_server_groups.sql  016_system_settings.sql  019_server_owner_transfers.sql  020_temporary_transfer_tokens.sql  021_pat_expiration_backfill.sql
crates/server/src/: config.rs  main.rs  secrets.rs  security.rs
crates/server/src/alerts/: engine.rs  mod.rs
crates/server/src/api/: mod.rs  types.rs
crates/server/src/api/v1/: agent.rs  agent_json.rs  agent_jwt.rs  alerts.rs  auth.rs  cloudflared.rs  ddns.rs  geoip.rs  maintenance.rs  mcp.rs  mod.rs  nat.rs  notifications.rs  oauth.rs  openapi.rs  pat.rs  public.rs  server_ops.rs  servers.rs  service_history.rs  services.rs  settings.rs  tasks.rs  terminal.rs  themes.rs  transfers.rs
crates/server/src/auth/: jwt.rs  middleware.rs  mod.rs  rbac.rs  session.rs  totp.rs
crates/server/src/db/: macros.rs  mod.rs  models.rs
crates/server/src/db/repository/: agent.rs  alerts.rs  ddns.rs  mod.rs  nat.rs  pat.rs  tasks.rs  temporary_transfer.rs  user.rs
crates/server/src/ddns/: manager.rs  mod.rs  policy.rs  provider.rs
crates/server/src/grpc/: mod.rs  session.rs
crates/server/src/mcp/: executor.rs  mod.rs  tools.rs
crates/server/src/nat/: mod.rs  policy.rs  tunnel.rs
crates/server/src/notifications/: mod.rs  policy.rs  sender.rs
crates/server/src/realtime/: mod.rs  ws.rs
crates/server/src/services/: mod.rs  monitor.rs  probe.rs
crates/server/src/tasks/: mod.rs  scheduler.rs
crates/shared/: Cargo.toml
crates/shared/src/: authz.rs  ddns.rs  error.rs  ids.rs  lib.rs  nat.rs  tasks.rs  terminal.rs
crates/tsdb/: Cargo.toml
crates/tsdb/src/: lib.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
deploy/: install-agent.sh  install.sh  xlstatus-agent.service  xlstatus-server.service
docs/: PROJECT-COMPLETION.md  README.md  agent-setup.md  agent.md  api.md  architecture.md  configuration.md  configuration.zh-CN.md  development.md  implementation-audit.md  installation.md  operations.md  project-structure.md  quickstart.md  quickstart.zh-CN.md  rbac.md  release-checklist.md  troubleshooting.md  web.md
docs/archive/: COMPLETION-REPORT.md  CONFIG.md  CONFIG.zh-CN.md  DOCKER-COMPOSE-GUIDE.md  FINAL-STATUS.md  LINUX-VERIFICATION.md  README.md  WORK-SUMMARY.md
docs/archive/plan/: 00-decisions.md  02-architecture.md  03-backend.md  04-agent.md  05-frontend.md  06-data-model.md  08-roadmap.md  09-test-plan.md  14-api-contracts.md  15-verification-commands.md
docs/archive/plan-mmx/: 02-decisions.md  03-architecture.md  04-workspace-layout.md  06-grpc-protocol.md  07-rest-api.md  08-websocket.md  11-roadmap.md  12-verification.md  13-files-checklist.md  README.md
docs/milestones/: M0-COMPLETION.md  M1-COMPLETION.md  M2-COMPLETION.md  M4-COMPLETION.md  M5-COMPLETION.md  M6-FULL-COMPLETION.md  M7-COMPLETION.md  M8-M9-COMPLETION.md
docs/performance/: m8-high-io.md
plan/: 01-scope.md  05-frontend.md  07-security.md  08-roadmap.md  10-ops-release.md  11-workspace-layout.md  12-dependencies.md  13-protocols.md  14-api-contracts.md  16-komari-nezha-gap.md  99-changelog.md  README.md
plan-mmx/: 01-context.md  05-dependencies.md  09-auth-model.md  10-database.md  99-changelog.md
proto/xlstatus/v1/: agent.proto  common.proto  nat.proto
scripts/: import_sqlite_to_postgres.py
test-run/: TESTING.md  legacy-smoke.sh  verify-m0.sh  verify-m1-pg.sh  verify-m2-reconnect.sh  verify-m2-revoke.sh  verify-m3-metrics.sh  verify-m3-tsdb.sh  verify-m3-ws.sh  verify-m4-alerts.sh  verify-m5-files.sh  verify-m5-scheduler.sh  verify-m5-task.sh  verify-m5-terminal.sh  verify-m6-ddns.sh  verify-m6-mcp.sh  verify-m6-nat.sh  verify-m7-ui.sh  verify-m8-migrations.sh  verify-m8-tsdb-load.sh  verify-m9-install.sh
web/: .dockerignore  Dockerfile  README.md  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
web/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  page.tsx
web/app/(auth)/login/: page.tsx
web/app/(dashboard)/: layout.tsx
web/app/(dashboard)/alerts/: page.tsx
web/app/(dashboard)/dashboard/: page.tsx
web/app/(dashboard)/ddns/: page.tsx
web/app/(dashboard)/nat/: page.tsx
web/app/components/: Dialogs.tsx  M7Primitives.tsx  Navigation.tsx  WorldServerMap.tsx  world-countries-110m.json
web/app/lib/: client-store.ts  format.ts
web/app/status/: page.tsx
web/lib/: api.ts  i18n.ts  use-i18n.ts
(+25 files in other folders)
