[package]
name = "xlstatus-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "xlstatus-agent"
path = "src/main.rs"

[dependencies]
xlstatus-shared = { path = "../shared" }
xlstatus-proto-gen = { path = "../proto-gen" }

tokio = { workspace = true, features = ["full"] }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Task executors
reqwest = { version = "0.11", features = ["json"] }
portable-pty = "0.8"

[dev-dependencies]
tempfile = "3.8"

