[package]
name = "xlstatus-agent"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "xlstatus-agent"
path = "src/main.rs"

[dependencies]
xlstatus-shared = { path = "../shared" }
xlstatus-proto-gen = { path = "../proto-gen" }

tokio = { workspace = true, features = ["full"] }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tonic = { workspace = true }
tokio-stream = "0.1"
ed25519-dalek = { workspace = true }
rand = { workspace = true }
hex = "0.4"
libc = "0.2"

# Task executors
reqwest = { workspace = true }
portable-pty = "0.8"
prost-types.workspace = true

[target.'cfg(not(target_os = "freebsd"))'.dependencies]
sysinfo.workspace = true

[dev-dependencies]
tempfile = "3.8"
