[package]
name = "xlstatus-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "xlstatus-server"
path = "src/main.rs"

[dependencies]
xlstatus-shared = { path = "../shared" }
xlstatus-proto-gen = { path = "../proto-gen" }
xlstatus-tsdb = { path = "../tsdb" }

tokio = { workspace = true }
tokio-stream = "0.1"
axum = { workspace = true }
axum-extra = { version = "0.9", features = ["cookie", "typed-header"] }
tower = { workspace = true }
tower-http = { workspace = true }
tonic = { workspace = true }
tonic-reflection = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
sha2 = "0.10"
hex = "0.4"
toml = "0.8"
jsonwebtoken = { workspace = true }
reqwest = { workspace = true }
cron = "0.12"
async-trait = "0.1.89"

