[package]
name = "xtask"
version = "0.2.0"
edition = "2021"

[dependencies]
xlstatus-tsdb = { path = "../tsdb" }

anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
